--- a/metadata.yaml
+++ b/metadata.yaml
@@ -12,7 +12,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-homepage: "https://tagmanageritalia.it/"
+homepage: "https://www.tagmanageritalia.com/"
 documentation: "https://github.com/matteo-zambon/EEC-dataLayer-Builder-for-GA4/blob/main/README.md"
 versions:
   - sha: 2da6d63a6a4ae1129915fe59fa67af56274b87d7
