--- a/metadata.yaml
+++ b/metadata.yaml
@@ -13,7 +13,12 @@
 # limitations under the License.
 
 homepage: "https://www.tagmanageritalia.com/"
-documentation: "https://github.com/matteo-zambon/EEC-dataLayer-Builder-for-GA4/blob/main/README.md"
+documentation: "https://www.tagmanageritalia.it/how-to-move-from-enhanced-ecommerce-tracking-to-google-analytics-4-ecommerce-tracking-with-google-tag-manager/"
+
 versions:
+  # Latest version
+  - sha: adb912bfd3e9d7fb2c72a90c418c16edebb5874b
+    changeNotes: Change name and description and documentation link
+  # Older versions
   - sha: 2da6d63a6a4ae1129915fe59fa67af56274b87d7
-    changeNotes: Initial Version
+    changeNotes: Initial release.
